Software package page demo with openSUSE brand colors

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,1 +1,7 @@
+// Customized Bootstrap
+@import "customize";
 @import "../../node_modules/bootstrap/scss/bootstrap";
+
+// Patches to Bootstrap
+@import "dropdown-animation";
+@import "selection-color";
