Use fonts of openSUSE brand guidelines

--- a/src/sass/_customize.scss
+++ b/src/sass/_customize.scss
@@ -18,3 +18,8 @@ $body-bg         : #f6f6f6;
 // Links
 $link-color           : $opensuse-cyan2;
 $link-hover-decoration: none;
+
+// Fonts
+$font-family-sans-serif: "Open Sans", "Source Sans Pro", sans-serif;
+$headings-font-family: "Open Sans Condensed", "Source Sans Pro", sans-serif;
+$font-family-monospace:  "Source Code Pro", monospace;
