Move search box to in-site navbar

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,3 +5,12 @@
 // Patches to Bootstrap
 @import "dropdown-animation";
 @import "selection-color";
+
+// Patch Typicons
+@import "typicons-size";
+
+// Universal styles for all sites
+@import "site-navbar";
+
+// software.opensuse.org
+@import "software";
