Fix dropdown problems

--- a/src/sass/_dropdown-animation.scss
+++ b/src/sass/_dropdown-animation.scss
@@ -1,4 +1,4 @@
-.dropdown, .btn-group {
+.dropdown, .dropup, .btn-group {
     .dropdown-menu {
         transition: max-height 0.2s, opacity 0.2s 0.1s, visibility 0s 0.3s;
         max-height: 0;
