Fix button and input font family

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,6 +6,7 @@
 @import "fontfaces";
 
 // Patches to Bootstrap
+@import "button-input-fonts";
 @import "dropdown-animation";
 @import "selection-color";
 
