Move dist folder

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -11,6 +11,7 @@
 @import "selection-color";
 
 // Patch Typicons
+@import "typicons";
 @import "typicons-size";
 
 // Universal styles for all sites
