--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -15,6 +15,7 @@
 @import "typicons-size";
 
 // Universal styles for all sites
+@import "global-navbar";
 @import "site-navbar";
 @import "footer";
 
