Remove logo margin inset

--- a/src/sass/_global-navbar.scss
+++ b/src/sass/_global-navbar.scss
@@ -3,9 +3,9 @@
         font-size: 1em;
 
         img {
-            height: 2.5em;
+            height: 2em;
             width: auto;
-            margin: -0.5em 0;
+            margin: 0;
         }
     }
 }
