Update to Bootstrap 4 Beta 2 and card style

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -21,3 +21,6 @@
 
 // software.opensuse.org
 @import "software";
+
+// wiki sites, en.opensuse.org, zh.opensuse.org
+@import "bootstrap-mediawiki/index";
