--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,6 +2,6 @@
     @extend .clearfix;
     margin-top: 30px;
     padding: 30px 0;
-    color: $gray-light;
-    background: $gray-lighter;
+    color: $gray-600;
+    background: $gray-100;
 }
