--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,6 +3,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Global styles
+@import "global";
 @import "fontfaces";
 
 // Patches to Bootstrap
