--- a/css/app.css
+++ b/css/app.css
@@ -105,7 +105,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #ffffff; }
+  background-color: #fff; }
 
 [tabindex="-1"]:focus {
   outline: none !important; }
@@ -450,7 +450,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 0.25rem;
   transition: all 0.2s ease-in-out;
@@ -1095,7 +1095,7 @@ pre {
   .table tbody + tbody {
     border-top: 2px solid #e9ecef; }
   .table .table {
-    background-color: #ffffff; }
+    background-color: #fff; }
 
 .table-sm th,
 .table-sm td {
@@ -1216,7 +1216,7 @@ pre {
     background-color: rgba(0, 0, 0, 0.075); }
 
 .table .thead-dark th {
-  color: #ffffff;
+  color: #fff;
   background-color: #212529;
   border-color: #32383e; }
 
@@ -1226,7 +1226,7 @@ pre {
   border-color: #e9ecef; }
 
 .table-dark {
-  color: #ffffff;
+  color: #fff;
   background-color: #212529; }
   .table-dark th,
   .table-dark td,
@@ -2351,7 +2351,7 @@ tbody.collapse.show {
     color: #fff;
     background-color: #35b9ab; }
   .custom-control-input:focus ~ .custom-control-indicator {
-    box-shadow: 0 0 0 1px #ffffff, 0 0 0 0.2rem rgba(53, 185, 171, 0.25); }
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(53, 185, 171, 0.25); }
   .custom-control-input:active ~ .custom-control-indicator {
     color: #fff;
     background-color: #b6eae5; }
@@ -2514,8 +2514,8 @@ tbody.collapse.show {
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
     color: #495057;
-    background-color: #ffffff;
-    border-color: #ddd #ddd #ffffff; }
+    background-color: #fff;
+    border-color: #ddd #ddd #fff; }
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
     border-top-left-radius: 0;
