--- a/src/sass/_customize.scss
+++ b/src/sass/_customize.scss
@@ -1,25 +1,25 @@
 // https://github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss
 
 // openSUSE Brand Colors
-$opensuse-green  : #73ba25;
-$opensuse-dark   : #173f4f;
-$opensuse-cyan   : #35b9ab;
-$opensuse-cyan2  : #00a489;
-$opensuse-green2 : #6da741;
-$opensuse-blue   : #21a4df;
+$opensuse-green : #73ba25;
+$opensuse-dark  : #173f4f;
+$opensuse-cyan  : #35b9ab;
+$opensuse-cyan2 : #00a489;
+$opensuse-green2: #6da741;
+$opensuse-blue  : #21a4df;
 
 // Bootstrap colors
-$primary:       $opensuse-cyan;
-//$secondary:     $gray-600;
-$success:       $opensuse-green;
-$info:          $opensuse-blue;
-//$warning:       $yellow;
-//$danger:        $red;
-//$light:         $gray-100;
-$dark:          $opensuse-dark;
+$primary    : $opensuse-cyan;
+//$secondary: $gray-600;
+$success    : $opensuse-green;
+$info       : $opensuse-blue;
+//$warning  : $yellow;
+//$danger   : $red;
+//$light    : $gray-100;
+$dark       : $opensuse-dark;
 
-// Boby
-$body-bg         : #ffffff;
+// Body background
+//$body-bg: #ffffff;
 
 // Links
 $link-color           : $opensuse-cyan2;
@@ -27,6 +27,6 @@ $link-hover-decoration: none;
 
 // Fonts
 $font-family-sans-serif: "Open Sans", sans-serif;
-$headings-font-family: "Open Sans Condensed", "Open Sans", sans-serif;
-$headings-font-weight: bold;
-$font-family-monospace:  "Source Code Pro", monospace;
+$headings-font-family  : "Open Sans Condensed", "Open Sans", sans-serif;
+$headings-font-weight  : bold;
+$font-family-monospace : "Source Code Pro", monospace;
