--- a/src/sass/_customize.scss
+++ b/src/sass/_customize.scss
@@ -19,7 +19,8 @@ $info       : $opensuse-blue;
 $dark       : $opensuse-dark;
 
 // Body background
-//$body-bg: #ffffff;
+$body-bg   : #ffffff;
+$body-color: #000000;
 
 // Links
 $link-color           : $opensuse-cyan2;
