--- a/src/sass/_customize.scss
+++ b/src/sass/_customize.scss
@@ -28,6 +28,9 @@ $link-hover-decoration: none;
 
 // Fonts
 $font-family-sans-serif: "Open Sans", sans-serif;
+$font-family-serif     : "Source Serif", serif;
+$font-family-monospace : "Source Code Pro", monospace;
+
+// Headings
 $headings-font-family  : "Open Sans Condensed", "Open Sans", sans-serif;
 $headings-font-weight  : bold;
-$font-family-monospace : "Source Code Pro", monospace;
