Darker table border color

--- a/src/sass/_customize.scss
+++ b/src/sass/_customize.scss
@@ -8,6 +8,29 @@ $opensuse-cyan2 : #00a489;
 $opensuse-green2: #6da741;
 $opensuse-blue  : #21a4df;
 
+$white:    #ffffff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #868e96;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black:    #000000;
+
+$blue:    #007bff;
+$indigo:  #6610f2;
+$purple:  #6f42c1;
+$pink:    #e83e8c;
+$red:     #dc3545;
+$orange:  #fd7e14;
+$yellow:  #ffc107;
+$green:   #28a745;
+$teal:    #20c997;
+$cyan:    #17a2b8;
+
 // Bootstrap colors
 $primary    : $opensuse-cyan;
 //$secondary: $gray-600;
@@ -34,3 +57,6 @@ $font-family-monospace : "Source Code Pro", monospace;
 // Headings
 $headings-font-family  : "Open Sans Condensed", "Open Sans", sans-serif;
 $headings-font-weight  : bold;
+
+// Table
+$table-border-color: $gray-400;
