--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -8,8 +8,8 @@
 
 // Patches to Bootstrap
 @import "button-input-fonts";
-@import "dropdown-animation";
 @import "selection-color";
+@import "dropdown-overflow-fix";
 
 // Patch Typicons
 @import "typicons";
