--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,7 +1,13 @@
 .global-footer {
-    @extend .clearfix;
-    margin-top: 30px;
-    padding: 30px 0;
-    color: $gray-600;
-    background: $gray-100;
+  @extend .clearfix;
+  margin-top: 30px;
+  padding: 30px 0;
+  color: $gray-600;
+  background: $gray-100;
+
+  .footer-copyright-language-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
