--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,7 @@
 // Customized Bootstrap
 @import "customize";
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/animate.css/animate.min.css";
 
 // Global styles
 @import "fontfaces";
