--- a/css/app.css
+++ b/css/app.css
@@ -8854,378 +8854,416 @@ a.text-dark:hover, a.text-dark:focus {
   font-style: normal;
   src: local("Open Sans Condensed Bold"), url("../fonts/open-sans-condensed/OpenSans-CondBold.woff") format("woff"), url("../fonts/open-sans-condensed/OpenSans-CondBold.ttf") format("truetype"); }
 
-html[lang="zh-CN"],
-html[lang="zh_CN"],
-html[lang="zh-Hans"] {
+[lang="zh"],
+[lang="zh-CN"],
+[lang="zh_CN"],
+[lang="zh-Hans"] {
   font-family: "Noto Sans", "Noto Sans SC", sans-serif; }
-  html[lang="zh-CN"] body,
-  html[lang="zh_CN"] body,
-  html[lang="zh-Hans"] body {
+  [lang="zh"] body,
+  [lang="zh-CN"] body,
+  [lang="zh_CN"] body,
+  [lang="zh-Hans"] body {
     font-family: "Noto Sans", "Noto Sans SC", sans-serif; }
-  html[lang="zh-CN"] button,
-  html[lang="zh-CN"] input,
-  html[lang="zh-CN"] select,
-  html[lang="zh-CN"] textarea,
-  html[lang="zh_CN"] button,
-  html[lang="zh_CN"] input,
-  html[lang="zh_CN"] select,
-  html[lang="zh_CN"] textarea,
-  html[lang="zh-Hans"] button,
-  html[lang="zh-Hans"] input,
-  html[lang="zh-Hans"] select,
-  html[lang="zh-Hans"] textarea {
+  [lang="zh"] button,
+  [lang="zh"] input,
+  [lang="zh"] select,
+  [lang="zh"] textarea,
+  [lang="zh-CN"] button,
+  [lang="zh-CN"] input,
+  [lang="zh-CN"] select,
+  [lang="zh-CN"] textarea,
+  [lang="zh_CN"] button,
+  [lang="zh_CN"] input,
+  [lang="zh_CN"] select,
+  [lang="zh_CN"] textarea,
+  [lang="zh-Hans"] button,
+  [lang="zh-Hans"] input,
+  [lang="zh-Hans"] select,
+  [lang="zh-Hans"] textarea {
     font-family: "Noto Sans", "Noto Sans SC", sans-serif; }
-  html[lang="zh-CN"] h1,
-  html[lang="zh-CN"] h2,
-  html[lang="zh-CN"] h3,
-  html[lang="zh-CN"] h4,
-  html[lang="zh-CN"] h5,
-  html[lang="zh-CN"] h6,
-  html[lang="zh-CN"] .h1,
-  html[lang="zh-CN"] .h2,
-  html[lang="zh-CN"] .h3,
-  html[lang="zh-CN"] .h4,
-  html[lang="zh-CN"] .h5,
-  html[lang="zh-CN"] .h6,
-  html[lang="zh-CN"] .display-1,
-  html[lang="zh-CN"] .display-2,
-  html[lang="zh-CN"] .display-3,
-  html[lang="zh-CN"] .lead,
-  html[lang="zh_CN"] h1,
-  html[lang="zh_CN"] h2,
-  html[lang="zh_CN"] h3,
-  html[lang="zh_CN"] h4,
-  html[lang="zh_CN"] h5,
-  html[lang="zh_CN"] h6,
-  html[lang="zh_CN"] .h1,
-  html[lang="zh_CN"] .h2,
-  html[lang="zh_CN"] .h3,
-  html[lang="zh_CN"] .h4,
-  html[lang="zh_CN"] .h5,
-  html[lang="zh_CN"] .h6,
-  html[lang="zh_CN"] .display-1,
-  html[lang="zh_CN"] .display-2,
-  html[lang="zh_CN"] .display-3,
-  html[lang="zh_CN"] .lead,
-  html[lang="zh-Hans"] h1,
-  html[lang="zh-Hans"] h2,
-  html[lang="zh-Hans"] h3,
-  html[lang="zh-Hans"] h4,
-  html[lang="zh-Hans"] h5,
-  html[lang="zh-Hans"] h6,
-  html[lang="zh-Hans"] .h1,
-  html[lang="zh-Hans"] .h2,
-  html[lang="zh-Hans"] .h3,
-  html[lang="zh-Hans"] .h4,
-  html[lang="zh-Hans"] .h5,
-  html[lang="zh-Hans"] .h6,
-  html[lang="zh-Hans"] .display-1,
-  html[lang="zh-Hans"] .display-2,
-  html[lang="zh-Hans"] .display-3,
-  html[lang="zh-Hans"] .lead {
+  [lang="zh"] h1,
+  [lang="zh"] h2,
+  [lang="zh"] h3,
+  [lang="zh"] h4,
+  [lang="zh"] h5,
+  [lang="zh"] h6,
+  [lang="zh"] .h1,
+  [lang="zh"] .h2,
+  [lang="zh"] .h3,
+  [lang="zh"] .h4,
+  [lang="zh"] .h5,
+  [lang="zh"] .h6,
+  [lang="zh"] .display-1,
+  [lang="zh"] .display-2,
+  [lang="zh"] .display-3,
+  [lang="zh"] .lead,
+  [lang="zh-CN"] h1,
+  [lang="zh-CN"] h2,
+  [lang="zh-CN"] h3,
+  [lang="zh-CN"] h4,
+  [lang="zh-CN"] h5,
+  [lang="zh-CN"] h6,
+  [lang="zh-CN"] .h1,
+  [lang="zh-CN"] .h2,
+  [lang="zh-CN"] .h3,
+  [lang="zh-CN"] .h4,
+  [lang="zh-CN"] .h5,
+  [lang="zh-CN"] .h6,
+  [lang="zh-CN"] .display-1,
+  [lang="zh-CN"] .display-2,
+  [lang="zh-CN"] .display-3,
+  [lang="zh-CN"] .lead,
+  [lang="zh_CN"] h1,
+  [lang="zh_CN"] h2,
+  [lang="zh_CN"] h3,
+  [lang="zh_CN"] h4,
+  [lang="zh_CN"] h5,
+  [lang="zh_CN"] h6,
+  [lang="zh_CN"] .h1,
+  [lang="zh_CN"] .h2,
+  [lang="zh_CN"] .h3,
+  [lang="zh_CN"] .h4,
+  [lang="zh_CN"] .h5,
+  [lang="zh_CN"] .h6,
+  [lang="zh_CN"] .display-1,
+  [lang="zh_CN"] .display-2,
+  [lang="zh_CN"] .display-3,
+  [lang="zh_CN"] .lead,
+  [lang="zh-Hans"] h1,
+  [lang="zh-Hans"] h2,
+  [lang="zh-Hans"] h3,
+  [lang="zh-Hans"] h4,
+  [lang="zh-Hans"] h5,
+  [lang="zh-Hans"] h6,
+  [lang="zh-Hans"] .h1,
+  [lang="zh-Hans"] .h2,
+  [lang="zh-Hans"] .h3,
+  [lang="zh-Hans"] .h4,
+  [lang="zh-Hans"] .h5,
+  [lang="zh-Hans"] .h6,
+  [lang="zh-Hans"] .display-1,
+  [lang="zh-Hans"] .display-2,
+  [lang="zh-Hans"] .display-3,
+  [lang="zh-Hans"] .lead {
     font-family: "Noto Sans", "Noto Sans SC", sans-serif; }
-  html[lang="zh-CN"] h1,
-  html[lang="zh-CN"] h2,
-  html[lang="zh-CN"] .h1,
-  html[lang="zh-CN"] .h2,
-  html[lang="zh-CN"] .display-1,
-  html[lang="zh-CN"] .display-2,
-  html[lang="zh-CN"] .display-3,
-  html[lang="zh_CN"] h1,
-  html[lang="zh_CN"] h2,
-  html[lang="zh_CN"] .h1,
-  html[lang="zh_CN"] .h2,
-  html[lang="zh_CN"] .display-1,
-  html[lang="zh_CN"] .display-2,
-  html[lang="zh_CN"] .display-3,
-  html[lang="zh-Hans"] h1,
-  html[lang="zh-Hans"] h2,
-  html[lang="zh-Hans"] .h1,
-  html[lang="zh-Hans"] .h2,
-  html[lang="zh-Hans"] .display-1,
-  html[lang="zh-Hans"] .display-2,
-  html[lang="zh-Hans"] .display-3 {
+  [lang="zh"] h1,
+  [lang="zh"] h2,
+  [lang="zh"] .h1,
+  [lang="zh"] .h2,
+  [lang="zh"] .display-1,
+  [lang="zh"] .display-2,
+  [lang="zh"] .display-3,
+  [lang="zh-CN"] h1,
+  [lang="zh-CN"] h2,
+  [lang="zh-CN"] .h1,
+  [lang="zh-CN"] .h2,
+  [lang="zh-CN"] .display-1,
+  [lang="zh-CN"] .display-2,
+  [lang="zh-CN"] .display-3,
+  [lang="zh_CN"] h1,
+  [lang="zh_CN"] h2,
+  [lang="zh_CN"] .h1,
+  [lang="zh_CN"] .h2,
+  [lang="zh_CN"] .display-1,
+  [lang="zh_CN"] .display-2,
+  [lang="zh_CN"] .display-3,
+  [lang="zh-Hans"] h1,
+  [lang="zh-Hans"] h2,
+  [lang="zh-Hans"] .h1,
+  [lang="zh-Hans"] .h2,
+  [lang="zh-Hans"] .display-1,
+  [lang="zh-Hans"] .display-2,
+  [lang="zh-Hans"] .display-3 {
     font-weight: 200; }
-  html[lang="zh-CN"] h3,
-  html[lang="zh-CN"] h4,
-  html[lang="zh-CN"] .h3,
-  html[lang="zh-CN"] .h4,
-  html[lang="zh-CN"] .lead,
-  html[lang="zh_CN"] h3,
-  html[lang="zh_CN"] h4,
-  html[lang="zh_CN"] .h3,
-  html[lang="zh_CN"] .h4,
-  html[lang="zh_CN"] .lead,
-  html[lang="zh-Hans"] h3,
-  html[lang="zh-Hans"] h4,
-  html[lang="zh-Hans"] .h3,
-  html[lang="zh-Hans"] .h4,
-  html[lang="zh-Hans"] .lead {
+  [lang="zh"] h3,
+  [lang="zh"] h4,
+  [lang="zh"] .h3,
+  [lang="zh"] .h4,
+  [lang="zh"] .lead,
+  [lang="zh-CN"] h3,
+  [lang="zh-CN"] h4,
+  [lang="zh-CN"] .h3,
+  [lang="zh-CN"] .h4,
+  [lang="zh-CN"] .lead,
+  [lang="zh_CN"] h3,
+  [lang="zh_CN"] h4,
+  [lang="zh_CN"] .h3,
+  [lang="zh_CN"] .h4,
+  [lang="zh_CN"] .lead,
+  [lang="zh-Hans"] h3,
+  [lang="zh-Hans"] h4,
+  [lang="zh-Hans"] .h3,
+  [lang="zh-Hans"] .h4,
+  [lang="zh-Hans"] .lead {
     font-weight: 300; }
-  html[lang="zh-CN"] h5,
-  html[lang="zh-CN"] h6,
-  html[lang="zh-CN"] .h5,
-  html[lang="zh-CN"] .h6,
-  html[lang="zh_CN"] h5,
-  html[lang="zh_CN"] h6,
-  html[lang="zh_CN"] .h5,
-  html[lang="zh_CN"] .h6,
-  html[lang="zh-Hans"] h5,
-  html[lang="zh-Hans"] h6,
-  html[lang="zh-Hans"] .h5,
-  html[lang="zh-Hans"] .h6 {
+  [lang="zh"] h5,
+  [lang="zh"] h6,
+  [lang="zh"] .h5,
+  [lang="zh"] .h6,
+  [lang="zh-CN"] h5,
+  [lang="zh-CN"] h6,
+  [lang="zh-CN"] .h5,
+  [lang="zh-CN"] .h6,
+  [lang="zh_CN"] h5,
+  [lang="zh_CN"] h6,
+  [lang="zh_CN"] .h5,
+  [lang="zh_CN"] .h6,
+  [lang="zh-Hans"] h5,
+  [lang="zh-Hans"] h6,
+  [lang="zh-Hans"] .h5,
+  [lang="zh-Hans"] .h6 {
     font-weight: 400; }
 
-html[lang="zh-TW"],
-html[lang="zh_TW"],
-html[lang="zh-Hant"] {
+[lang="zh-TW"],
+[lang="zh_TW"],
+[lang="zh-Hant"] {
   font-family: "Noto Sans", "Noto Sans TC", sans-serif; }
-  html[lang="zh-TW"] body,
-  html[lang="zh_TW"] body,
-  html[lang="zh-Hant"] body {
+  [lang="zh-TW"] body,
+  [lang="zh_TW"] body,
+  [lang="zh-Hant"] body {
     font-family: "Noto Sans", "Noto Sans TC", sans-serif; }
-  html[lang="zh-TW"] button,
-  html[lang="zh-TW"] input,
-  html[lang="zh-TW"] select,
-  html[lang="zh-TW"] textarea,
-  html[lang="zh_TW"] button,
-  html[lang="zh_TW"] input,
-  html[lang="zh_TW"] select,
-  html[lang="zh_TW"] textarea,
-  html[lang="zh-Hant"] button,
-  html[lang="zh-Hant"] input,
-  html[lang="zh-Hant"] select,
-  html[lang="zh-Hant"] textarea {
+  [lang="zh-TW"] button,
+  [lang="zh-TW"] input,
+  [lang="zh-TW"] select,
+  [lang="zh-TW"] textarea,
+  [lang="zh_TW"] button,
+  [lang="zh_TW"] input,
+  [lang="zh_TW"] select,
+  [lang="zh_TW"] textarea,
+  [lang="zh-Hant"] button,
+  [lang="zh-Hant"] input,
+  [lang="zh-Hant"] select,
+  [lang="zh-Hant"] textarea {
     font-family: "Noto Sans", "Noto Sans TC", sans-serif; }
-  html[lang="zh-TW"] h1,
-  html[lang="zh-TW"] h2,
-  html[lang="zh-TW"] h3,
-  html[lang="zh-TW"] h4,
-  html[lang="zh-TW"] h5,
-  html[lang="zh-TW"] h6,
-  html[lang="zh-TW"] .h1,
-  html[lang="zh-TW"] .h2,
-  html[lang="zh-TW"] .h3,
-  html[lang="zh-TW"] .h4,
-  html[lang="zh-TW"] .h5,
-  html[lang="zh-TW"] .h6,
-  html[lang="zh-TW"] .display-1,
-  html[lang="zh-TW"] .display-2,
-  html[lang="zh-TW"] .display-3,
-  html[lang="zh-TW"] .lead,
-  html[lang="zh_TW"] h1,
-  html[lang="zh_TW"] h2,
-  html[lang="zh_TW"] h3,
-  html[lang="zh_TW"] h4,
-  html[lang="zh_TW"] h5,
-  html[lang="zh_TW"] h6,
-  html[lang="zh_TW"] .h1,
-  html[lang="zh_TW"] .h2,
-  html[lang="zh_TW"] .h3,
-  html[lang="zh_TW"] .h4,
-  html[lang="zh_TW"] .h5,
-  html[lang="zh_TW"] .h6,
-  html[lang="zh_TW"] .display-1,
-  html[lang="zh_TW"] .display-2,
-  html[lang="zh_TW"] .display-3,
-  html[lang="zh_TW"] .lead,
-  html[lang="zh-Hant"] h1,
-  html[lang="zh-Hant"] h2,
-  html[lang="zh-Hant"] h3,
-  html[lang="zh-Hant"] h4,
-  html[lang="zh-Hant"] h5,
-  html[lang="zh-Hant"] h6,
-  html[lang="zh-Hant"] .h1,
-  html[lang="zh-Hant"] .h2,
-  html[lang="zh-Hant"] .h3,
-  html[lang="zh-Hant"] .h4,
-  html[lang="zh-Hant"] .h5,
-  html[lang="zh-Hant"] .h6,
-  html[lang="zh-Hant"] .display-1,
-  html[lang="zh-Hant"] .display-2,
-  html[lang="zh-Hant"] .display-3,
-  html[lang="zh-Hant"] .lead {
+  [lang="zh-TW"] h1,
+  [lang="zh-TW"] h2,
+  [lang="zh-TW"] h3,
+  [lang="zh-TW"] h4,
+  [lang="zh-TW"] h5,
+  [lang="zh-TW"] h6,
+  [lang="zh-TW"] .h1,
+  [lang="zh-TW"] .h2,
+  [lang="zh-TW"] .h3,
+  [lang="zh-TW"] .h4,
+  [lang="zh-TW"] .h5,
+  [lang="zh-TW"] .h6,
+  [lang="zh-TW"] .display-1,
+  [lang="zh-TW"] .display-2,
+  [lang="zh-TW"] .display-3,
+  [lang="zh-TW"] .lead,
+  [lang="zh_TW"] h1,
+  [lang="zh_TW"] h2,
+  [lang="zh_TW"] h3,
+  [lang="zh_TW"] h4,
+  [lang="zh_TW"] h5,
+  [lang="zh_TW"] h6,
+  [lang="zh_TW"] .h1,
+  [lang="zh_TW"] .h2,
+  [lang="zh_TW"] .h3,
+  [lang="zh_TW"] .h4,
+  [lang="zh_TW"] .h5,
+  [lang="zh_TW"] .h6,
+  [lang="zh_TW"] .display-1,
+  [lang="zh_TW"] .display-2,
+  [lang="zh_TW"] .display-3,
+  [lang="zh_TW"] .lead,
+  [lang="zh-Hant"] h1,
+  [lang="zh-Hant"] h2,
+  [lang="zh-Hant"] h3,
+  [lang="zh-Hant"] h4,
+  [lang="zh-Hant"] h5,
+  [lang="zh-Hant"] h6,
+  [lang="zh-Hant"] .h1,
+  [lang="zh-Hant"] .h2,
+  [lang="zh-Hant"] .h3,
+  [lang="zh-Hant"] .h4,
+  [lang="zh-Hant"] .h5,
+  [lang="zh-Hant"] .h6,
+  [lang="zh-Hant"] .display-1,
+  [lang="zh-Hant"] .display-2,
+  [lang="zh-Hant"] .display-3,
+  [lang="zh-Hant"] .lead {
     font-family: "Noto Sans", "Noto Sans TC", sans-serif; }
-  html[lang="zh-TW"] h1,
-  html[lang="zh-TW"] h2,
-  html[lang="zh-TW"] .h1,
-  html[lang="zh-TW"] .h2,
-  html[lang="zh-TW"] .display-1,
-  html[lang="zh-TW"] .display-2,
-  html[lang="zh-TW"] .display-3,
-  html[lang="zh_TW"] h1,
-  html[lang="zh_TW"] h2,
-  html[lang="zh_TW"] .h1,
-  html[lang="zh_TW"] .h2,
-  html[lang="zh_TW"] .display-1,
-  html[lang="zh_TW"] .display-2,
-  html[lang="zh_TW"] .display-3,
-  html[lang="zh-Hant"] h1,
-  html[lang="zh-Hant"] h2,
-  html[lang="zh-Hant"] .h1,
-  html[lang="zh-Hant"] .h2,
-  html[lang="zh-Hant"] .display-1,
-  html[lang="zh-Hant"] .display-2,
-  html[lang="zh-Hant"] .display-3 {
+  [lang="zh-TW"] h1,
+  [lang="zh-TW"] h2,
+  [lang="zh-TW"] .h1,
+  [lang="zh-TW"] .h2,
+  [lang="zh-TW"] .display-1,
+  [lang="zh-TW"] .display-2,
+  [lang="zh-TW"] .display-3,
+  [lang="zh_TW"] h1,
+  [lang="zh_TW"] h2,
+  [lang="zh_TW"] .h1,
+  [lang="zh_TW"] .h2,
+  [lang="zh_TW"] .display-1,
+  [lang="zh_TW"] .display-2,
+  [lang="zh_TW"] .display-3,
+  [lang="zh-Hant"] h1,
+  [lang="zh-Hant"] h2,
+  [lang="zh-Hant"] .h1,
+  [lang="zh-Hant"] .h2,
+  [lang="zh-Hant"] .display-1,
+  [lang="zh-Hant"] .display-2,
+  [lang="zh-Hant"] .display-3 {
     font-weight: 200; }
-  html[lang="zh-TW"] h3,
-  html[lang="zh-TW"] h4,
-  html[lang="zh-TW"] .h3,
-  html[lang="zh-TW"] .h4,
-  html[lang="zh-TW"] .lead,
-  html[lang="zh_TW"] h3,
-  html[lang="zh_TW"] h4,
-  html[lang="zh_TW"] .h3,
-  html[lang="zh_TW"] .h4,
-  html[lang="zh_TW"] .lead,
-  html[lang="zh-Hant"] h3,
-  html[lang="zh-Hant"] h4,
-  html[lang="zh-Hant"] .h3,
-  html[lang="zh-Hant"] .h4,
-  html[lang="zh-Hant"] .lead {
+  [lang="zh-TW"] h3,
+  [lang="zh-TW"] h4,
+  [lang="zh-TW"] .h3,
+  [lang="zh-TW"] .h4,
+  [lang="zh-TW"] .lead,
+  [lang="zh_TW"] h3,
+  [lang="zh_TW"] h4,
+  [lang="zh_TW"] .h3,
+  [lang="zh_TW"] .h4,
+  [lang="zh_TW"] .lead,
+  [lang="zh-Hant"] h3,
+  [lang="zh-Hant"] h4,
+  [lang="zh-Hant"] .h3,
+  [lang="zh-Hant"] .h4,
+  [lang="zh-Hant"] .lead {
     font-weight: 300; }
-  html[lang="zh-TW"] h5,
-  html[lang="zh-TW"] h6,
-  html[lang="zh-TW"] .h5,
-  html[lang="zh-TW"] .h6,
-  html[lang="zh_TW"] h5,
-  html[lang="zh_TW"] h6,
-  html[lang="zh_TW"] .h5,
-  html[lang="zh_TW"] .h6,
-  html[lang="zh-Hant"] h5,
-  html[lang="zh-Hant"] h6,
-  html[lang="zh-Hant"] .h5,
-  html[lang="zh-Hant"] .h6 {
+  [lang="zh-TW"] h5,
+  [lang="zh-TW"] h6,
+  [lang="zh-TW"] .h5,
+  [lang="zh-TW"] .h6,
+  [lang="zh_TW"] h5,
+  [lang="zh_TW"] h6,
+  [lang="zh_TW"] .h5,
+  [lang="zh_TW"] .h6,
+  [lang="zh-Hant"] h5,
+  [lang="zh-Hant"] h6,
+  [lang="zh-Hant"] .h5,
+  [lang="zh-Hant"] .h6 {
     font-weight: 400; }
 
-html[lang="ja"],
-html[lang="jp"] {
+[lang="ja"],
+[lang="jp"] {
   font-family: "Noto Sans", "Noto Sans JP", sans-serif; }
-  html[lang="ja"] body,
-  html[lang="jp"] body {
+  [lang="ja"] body,
+  [lang="jp"] body {
     font-family: "Noto Sans", "Noto Sans JP", sans-serif; }
-  html[lang="ja"] button,
-  html[lang="ja"] input,
-  html[lang="ja"] select,
-  html[lang="ja"] textarea,
-  html[lang="jp"] button,
-  html[lang="jp"] input,
-  html[lang="jp"] select,
-  html[lang="jp"] textarea {
+  [lang="ja"] button,
+  [lang="ja"] input,
+  [lang="ja"] select,
+  [lang="ja"] textarea,
+  [lang="jp"] button,
+  [lang="jp"] input,
+  [lang="jp"] select,
+  [lang="jp"] textarea {
     font-family: "Noto Sans", "Noto Sans JP", sans-serif; }
-  html[lang="ja"] h1,
-  html[lang="ja"] h2,
-  html[lang="ja"] h3,
-  html[lang="ja"] h4,
-  html[lang="ja"] h5,
-  html[lang="ja"] h6,
-  html[lang="ja"] .h1,
-  html[lang="ja"] .h2,
-  html[lang="ja"] .h3,
-  html[lang="ja"] .h4,
-  html[lang="ja"] .h5,
-  html[lang="ja"] .h6,
-  html[lang="ja"] .display-1,
-  html[lang="ja"] .display-2,
-  html[lang="ja"] .display-3,
-  html[lang="ja"] .lead,
-  html[lang="jp"] h1,
-  html[lang="jp"] h2,
-  html[lang="jp"] h3,
-  html[lang="jp"] h4,
-  html[lang="jp"] h5,
-  html[lang="jp"] h6,
-  html[lang="jp"] .h1,
-  html[lang="jp"] .h2,
-  html[lang="jp"] .h3,
-  html[lang="jp"] .h4,
-  html[lang="jp"] .h5,
-  html[lang="jp"] .h6,
-  html[lang="jp"] .display-1,
-  html[lang="jp"] .display-2,
-  html[lang="jp"] .display-3,
-  html[lang="jp"] .lead {
+  [lang="ja"] h1,
+  [lang="ja"] h2,
+  [lang="ja"] h3,
+  [lang="ja"] h4,
+  [lang="ja"] h5,
+  [lang="ja"] h6,
+  [lang="ja"] .h1,
+  [lang="ja"] .h2,
+  [lang="ja"] .h3,
+  [lang="ja"] .h4,
+  [lang="ja"] .h5,
+  [lang="ja"] .h6,
+  [lang="ja"] .display-1,
+  [lang="ja"] .display-2,
+  [lang="ja"] .display-3,
+  [lang="ja"] .lead,
+  [lang="jp"] h1,
+  [lang="jp"] h2,
+  [lang="jp"] h3,
+  [lang="jp"] h4,
+  [lang="jp"] h5,
+  [lang="jp"] h6,
+  [lang="jp"] .h1,
+  [lang="jp"] .h2,
+  [lang="jp"] .h3,
+  [lang="jp"] .h4,
+  [lang="jp"] .h5,
+  [lang="jp"] .h6,
+  [lang="jp"] .display-1,
+  [lang="jp"] .display-2,
+  [lang="jp"] .display-3,
+  [lang="jp"] .lead {
     font-family: "Noto Sans", "Noto Sans JP", sans-serif; }
-  html[lang="ja"] h1,
-  html[lang="ja"] h2,
-  html[lang="ja"] .h1,
-  html[lang="ja"] .h2,
-  html[lang="ja"] .display-1,
-  html[lang="ja"] .display-2,
-  html[lang="ja"] .display-3,
-  html[lang="jp"] h1,
-  html[lang="jp"] h2,
-  html[lang="jp"] .h1,
-  html[lang="jp"] .h2,
-  html[lang="jp"] .display-1,
-  html[lang="jp"] .display-2,
-  html[lang="jp"] .display-3 {
+  [lang="ja"] h1,
+  [lang="ja"] h2,
+  [lang="ja"] .h1,
+  [lang="ja"] .h2,
+  [lang="ja"] .display-1,
+  [lang="ja"] .display-2,
+  [lang="ja"] .display-3,
+  [lang="jp"] h1,
+  [lang="jp"] h2,
+  [lang="jp"] .h1,
+  [lang="jp"] .h2,
+  [lang="jp"] .display-1,
+  [lang="jp"] .display-2,
+  [lang="jp"] .display-3 {
     font-weight: 200; }
-  html[lang="ja"] h3,
-  html[lang="ja"] h4,
-  html[lang="ja"] .h3,
-  html[lang="ja"] .h4,
-  html[lang="ja"] .lead,
-  html[lang="jp"] h3,
-  html[lang="jp"] h4,
-  html[lang="jp"] .h3,
-  html[lang="jp"] .h4,
-  html[lang="jp"] .lead {
+  [lang="ja"] h3,
+  [lang="ja"] h4,
+  [lang="ja"] .h3,
+  [lang="ja"] .h4,
+  [lang="ja"] .lead,
+  [lang="jp"] h3,
+  [lang="jp"] h4,
+  [lang="jp"] .h3,
+  [lang="jp"] .h4,
+  [lang="jp"] .lead {
     font-weight: 300; }
-  html[lang="ja"] h5,
-  html[lang="ja"] h6,
-  html[lang="ja"] .h5,
-  html[lang="ja"] .h6,
-  html[lang="jp"] h5,
-  html[lang="jp"] h6,
-  html[lang="jp"] .h5,
-  html[lang="jp"] .h6 {
+  [lang="ja"] h5,
+  [lang="ja"] h6,
+  [lang="ja"] .h5,
+  [lang="ja"] .h6,
+  [lang="jp"] h5,
+  [lang="jp"] h6,
+  [lang="jp"] .h5,
+  [lang="jp"] .h6 {
     font-weight: 400; }
 
-html[lang="kr"] {
+[lang="kr"] {
   font-family: "Noto Sans", "Noto Sans KR", sans-serif; }
-  html[lang="kr"] body {
+  [lang="kr"] body {
     font-family: "Noto Sans", "Noto Sans KR", sans-serif; }
-  html[lang="kr"] button,
-  html[lang="kr"] input,
-  html[lang="kr"] select,
-  html[lang="kr"] textarea {
+  [lang="kr"] button,
+  [lang="kr"] input,
+  [lang="kr"] select,
+  [lang="kr"] textarea {
     font-family: "Noto Sans", "Noto Sans KR", sans-serif; }
-  html[lang="kr"] h1,
-  html[lang="kr"] h2,
-  html[lang="kr"] h3,
-  html[lang="kr"] h4,
-  html[lang="kr"] h5,
-  html[lang="kr"] h6,
-  html[lang="kr"] .h1,
-  html[lang="kr"] .h2,
-  html[lang="kr"] .h3,
-  html[lang="kr"] .h4,
-  html[lang="kr"] .h5,
-  html[lang="kr"] .h6,
-  html[lang="kr"] .display-1,
-  html[lang="kr"] .display-2,
-  html[lang="kr"] .display-3,
-  html[lang="kr"] .lead {
+  [lang="kr"] h1,
+  [lang="kr"] h2,
+  [lang="kr"] h3,
+  [lang="kr"] h4,
+  [lang="kr"] h5,
+  [lang="kr"] h6,
+  [lang="kr"] .h1,
+  [lang="kr"] .h2,
+  [lang="kr"] .h3,
+  [lang="kr"] .h4,
+  [lang="kr"] .h5,
+  [lang="kr"] .h6,
+  [lang="kr"] .display-1,
+  [lang="kr"] .display-2,
+  [lang="kr"] .display-3,
+  [lang="kr"] .lead {
     font-family: "Noto Sans", "Noto Sans KR", sans-serif; }
-  html[lang="kr"] h1,
-  html[lang="kr"] h2,
-  html[lang="kr"] .h1,
-  html[lang="kr"] .h2,
-  html[lang="kr"] .display-1,
-  html[lang="kr"] .display-2,
-  html[lang="kr"] .display-3 {
+  [lang="kr"] h1,
+  [lang="kr"] h2,
+  [lang="kr"] .h1,
+  [lang="kr"] .h2,
+  [lang="kr"] .display-1,
+  [lang="kr"] .display-2,
+  [lang="kr"] .display-3 {
     font-weight: 200; }
-  html[lang="kr"] h3,
-  html[lang="kr"] h4,
-  html[lang="kr"] .h3,
-  html[lang="kr"] .h4,
-  html[lang="kr"] .lead {
+  [lang="kr"] h3,
+  [lang="kr"] h4,
+  [lang="kr"] .h3,
+  [lang="kr"] .h4,
+  [lang="kr"] .lead {
     font-weight: 300; }
-  html[lang="kr"] h5,
-  html[lang="kr"] h6,
-  html[lang="kr"] .h5,
-  html[lang="kr"] .h6 {
+  [lang="kr"] h5,
+  [lang="kr"] h6,
+  [lang="kr"] .h5,
+  [lang="kr"] .h6 {
     font-weight: 400; }
 
 button, input, select {
