--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -9,5 +9,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include media-breakpoint-down(sm) {
+      display: block;
+    }
   }
 }
