Make carousel button and caption more visible on light background

--- a/css/app.css
+++ b/css/app.css
@@ -10664,6 +10664,17 @@ textarea {
   max-height: 50vh;
   overflow-y: auto; }
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-size: 1rem 1rem; }
+
+.carousel-caption {
+  border-radius: 1rem;
+  background-color: rgba(0, 0, 0, 0.5); }
+
 /* @FONT-FACE loads font into browser */
 @font-face {
   font-family: "typicons";
