--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,6 +14,7 @@
 @import "button-input-fonts";
 @import "selection-color";
 @import "dropdown-overflow-fix";
+@import "carousel";
 
 // Patch Typicons
 @import "typicons";
