--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,6 @@
 // Customized Bootstrap
 @import "customize";
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "bootstrap/scss/bootstrap";
 
 // Patched Typicons
 @import "typicons";
